--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -21,8 +21,11 @@
     "@formatjs/intl-pluralrules": "^5.2.2",
     "@shopify/app-bridge": "^3.7.7",
     "@shopify/app-bridge-react": "^3.7.7",
+    "@shopify/discount-app-components": "^1.0.7",
     "@shopify/i18next-shopify": "0.2.0",
     "@shopify/polaris": "^10.49.1",
+    "@shopify/react-form": "^2.5.5",
+    "@shopify/react-i18n": "^7.8.0",
     "@vitejs/plugin-react": "1.2.0",
     "i18next": "^22.4.11",
     "i18next-resources-to-backend": "^1.1.3",
